--- a/app/views/calculator/index.html.erb
+++ b/app/views/calculator/index.html.erb
@@ -2,12 +2,10 @@
 <h2><%= link_to "back" , root_path %></h2>
 
 <table>
-
+<% p @items%>
     <% @items.each do |i| %>
     <tr>
    <td><img src =  <%= 'https://ddragon.leagueoflegends.com/cdn/5.15.1/img/item/'+i.to_s+'.png'  %> ></td>
-    
-    
    <td><%= i.inspect  %></td>
    <td><%= Item.find(i)[:description] %></td>
    </tr>
