--- a/app/views/list/list_runes.html.erb
+++ b/app/views/list/list_runes.html.erb
@@ -2,19 +2,22 @@
 <h1>Listing Runes</h1>
 
 
-<table>
+<table class="table-bordered">
   <tr>
   <th>name</th>
   <th>id</th>
+  <th>type</th>
   <th>stats</th>
+ 
   </tr>
   <% @runes.each do |rune| %>
     <tr>
       <td><%= rune.attributes["name"]%></td>
       <td><%= rune.attributes["id"]%></td>
+      <td><%= rune.attributes["r_type"]%></td>
       <td>
       <% rune.attributes.each do |k,i| %>
-      <%= k.to_s+" "+i.to_s unless i.blank? || k=="name"||k=="id" %>
+      <%= k.to_s+" "+i.to_s unless i.blank? || k=="name"||k=="id" ||k=="r_type" %>
       <% end %>
       </td>
     </tr>
