--- a/app/views/calculator/calc.js.erb
+++ b/app/views/calculator/calc.js.erb
@@ -1,7 +1,3 @@
 <% calc %>
-<% if session[:side]==:left %>
-$('#lefthalf #estimates').html(" <%= j (render 'estimates') %>")
-<% end %>
-<% if session[:side]==:right %>
-$('#righthalf #estimates').html(" <%= j (render 'estimates') %>")
-<%end%>
+
+$('#estimates').html(" <%= j (render 'estimates') %>")
