--- a/app/assets/stylesheets/calculator.scss
+++ b/app/assets/stylesheets/calculator.scss
@@ -1,5 +1,21 @@
 // Place all the styles related to the Calculator controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.search 
+.search {
     display: none
+}
+ body {
+     color:#01061F!important;
+  /* background-color: rgba(95, 97, 117, 0.66)!important;*/
+}
+.table-hover>tbody>tr>td:hover, .table-hover>tbody>tr>td:hover{
+        text-decoration: underline;
+        background-color: silver!important;
+    }
+    
+.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th{
+    background-color: inherit;
+}
+.tablie-bordered{
+    
+}
