--- a/app/views/list/list_items.html.erb
+++ b/app/views/list/list_items.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Back" , root_path %>
 <h1>Listing Items</h1>
 
-<table>
+<table class="table-bordered">
   <tr>
     <th>icon</th>
   <th>name</th>
@@ -12,7 +12,7 @@
   </tr>
   <% @items.each do |item| %>
     <tr>
-      <td><img src =  <%= 'https://ddragon.leagueoflegends.com/cdn/5.15.1/img/item/'+item["id"].to_s+'.png'  %> ></td>
+      <td><img src =  <%= 'https://ddragon.leagueoflegends.com/cdn/5.16.1/img/item/'+item["id"].to_s+'.png'  %> ></td>
       <td><%= item.attributes["name"]%></td>
       <td><%= item.attributes["id"]%></td>
       <td><%= item.attributes["cost"]%></td>
